clean code on logging in ChatRoomService and add migration state XML files